src/objects/Zuora__Subscription__c.object
<CustomObject>
    <description>A subscription is a product or service that has recurring charges, such as a monthly flat fee or charges based on usage. Subscriptions can also include one-time charges, such as activation fees.</description>
    <fields>
        <fullName>AccountIdCaseInsensitive__c</fullName>
        <formula>CASESAFEID(Zuora__Account__r.Id)</formula>
        <label>AccountIdCaseInsensitive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <description>for CSP-1786</description>
        <label>AutoRenewal</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Account_ID_Formula_c__c</fullName>
        <formula>Zuora__CustomerAccount__r.Zuora__Zuora_Id__c</formula>
        <label>Billing_Account_ID_Formula__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatingSalesforceQuoteID__c</fullName>
        <description>SF-602</description>
        <label>CreatingSalesforceQuoteID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountTotal__c</fullName>
        <label>Discount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FloaterRepID__c</fullName>
        <label>FloaterRepID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floater_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Floater Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Floater_Rep_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrossTotal__c</fullName>
        <label>Gross Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>I_Am_The_Renewal_Rep__c</fullName>
        <formula>$User.Id =  Renewal_Rep__r.Id</formula>
        <label>I Am The Renewal Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Expired__c</fullName>
        <description>SF-612</description>
        <formula>Zuora__SubscriptionEndDate__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid_Subscription__c</fullName>
        <formula>Zuora__TermEndDate__c &gt;=  Zuora__TermStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Valid Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <picklist>
            <picklistValues>
                <fullName>The Knot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Bump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will have the latest quote which has modified/amended this subscription.</description>
        <inlineHelpText>This field will have the latest quote which has modified/amended this subscription.</inlineHelpText>
        <label>Latest Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Subscriptions (Latest Quote)</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NeedToUpdateSubscriptionCreator__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SF-602</description>
        <label>Need To Update Subscription Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetTotal__c</fullName>
        <label>Net Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderType1__c</fullName>
        <label>Order Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>First Internet Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Print Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal(Original)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal(New)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Renter(Original)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Renter(New)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OriginalSalesforceQuoteID__c</fullName>
        <description>SF-602</description>
        <label>OriginalSalesforceQuoteID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalSubCreatorSalesRepId__c</fullName>
        <label>OriginalSubCreatorSalesRepId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Quote which originally created this Subscription before any amendments.</description>
        <inlineHelpText>This is the Quote which originally created this Subscription before any amendments.</inlineHelpText>
        <label>Original Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>This field is used to Copy the payment method that is selected during the quote process and will sync down to subscription in zuora</description>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Payment_Schedule__c</fullName>
        <description>Used during the quoting process to determine how to set up pricing on products. This affects the frequency of charges.</description>
        <inlineHelpText>Used during the quoting process to determine how to set up pricing on products. This affects the frequency of charges.</inlineHelpText>
        <label>Preferred Payment Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>SF-1428</description>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Id__c</fullName>
        <label>RSD Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalRepId__c</fullName>
        <label>RenewalRepId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Renewal_Rep_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportingRepId__c</fullName>
        <label>ReportingRepId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscriptions_Reporting_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesRepId__c</fullName>
        <label>SalesRepId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Original Rep</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Rep_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubscriptionCreatorSalesforceID__c</fullName>
        <description>SF-602</description>
        <label>Subscription Creator Salesforce ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionCreator__c</fullName>
        <description>SF-602</description>
        <label>Subscription Creator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionType__c</fullName>
        <label>Subscription Type</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>True_Subscription_Status__c</fullName>
        <description>CSP-764 | Use this field for reporting on Subscription Status since the Status field provided by Zuora is not reliable.</description>
        <formula>IF(Zuora__Status__c == &apos;Cancelled&apos;, &apos;Cancelled&apos;, IF(Is_Expired__c, &apos;Expired&apos;, &apos;Active&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CSP-764 | Use this field for reporting on Subscription Status since the Status field provided by Zuora is not reliable.</inlineHelpText>
        <label>True Subscription Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoRenew?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__CancelledDate__c</fullName>
        <description>The date of the Amendment object that canceled the subscription.</description>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ContractAcceptanceDate__c</fullName>
        <description>This is the date on which the contract was accepted by the customer, and will trigger charges that have their trigger event set to Upon Customer Acceptance.</description>
        <label>Contract Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ContractEffectiveDate__c</fullName>
        <description>This is the date on which the contract becomes effective, and will trigger charges that have their trigger event set to Upon Contract Effective.</description>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__CurrentTermPeriodType__c</fullName>
        <description>The period type for the current subscription term.</description>
        <inlineHelpText>The period type of the current subscription term.</inlineHelpText>
        <label>Current Term Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__CurrentTerm__c</fullName>
        <label>Current Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CustomerAccount__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__InitialTermPeriodType__c</fullName>
        <description>The period type for the first subscription term.</description>
        <inlineHelpText>The period type for the first subscription term.</inlineHelpText>
        <label>Initial Term Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__InitialTerm__c</fullName>
        <label>Initial Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__InvoiceOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Owner</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Subscriptions (Invoice Owner)</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__MRR__c</fullName>
        <label>CMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__NextChargeDate__c</fullName>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__NextRenewalDate__c</fullName>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__OpportunityCloseDate__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__OpportunityName__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalCreatedDate__c</fullName>
        <description>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</description>
        <inlineHelpText>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</inlineHelpText>
        <label>Original Created Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalCreated_Date__c</fullName>
        <description>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</description>
        <inlineHelpText>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalId__c</fullName>
        <description>The original ID of this subscription.</description>
        <label>Original Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PreviousSubscriptionId__c</fullName>
        <description>The subscription ID immediately prior to the current subscription.</description>
        <label>Previous Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__QuoteBusinessType__c</fullName>
        <label>Quote Business Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__QuoteNumber__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__QuoteType__c</fullName>
        <label>Quote Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RenewalTermPeriodType__c</fullName>
        <description>The period type for the subscription renewal term.</description>
        <inlineHelpText>The period type for the subscription renewal term.</inlineHelpText>
        <label>Renewal Term Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__RenewalTerm__c</fullName>
        <label>Renewal Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ServiceActivationDate__c</fullName>
        <description>This is when the service was activated, and will trigger charges that have their trigger event set to Upon Service Activation.</description>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionEndDate__c</fullName>
        <description>This is when the subscription ends. This is always equal to term end date, unless the subscription has been cancelled. If the subscription has been cancelled, this is set to the cancellation date.</description>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionNumber__c</fullName>
        <externalId>true</externalId>
        <label>Subscription Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionStartDate__c</fullName>
        <description>The date when the subscription term starts. This is equal to the term start date if the subscription is on its initial term. Otherwise, it is the original term start date if the subscription has renewed.</description>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TermEndDate__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TermSettingType__c</fullName>
        <description>Case sensitive. Denotes if a subscription is evergreen (has no end date or term length) or has a term.</description>
        <label>Term Setting Type</label>
        <picklist>
            <picklistValues>
                <fullName>TERMED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVERGREEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__Zuora_Id__c</fullName>
        <description>The Zuora Id (external primary key) of this Subscription.</description>
        <inlineHelpText>The Zuora Id (external primary key) of this Subscription.</inlineHelpText>
        <label>Zuora Id (Deprecated)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>includeLess12Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>includeLess12Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testRay__c</fullName>
        <formula>Zuora__CurrentTerm__c = Zuora__InitialTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testRay</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>Need_to_Update_Subscription_Creator</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>SubscriptionCreator__c</columns>
        <columns>SubscriptionCreatorSalesforceID__c</columns>
        <columns>OriginalSalesforceQuoteID__c</columns>
        <columns>NeedToUpdateSubscriptionCreator__c</columns>
        <filterScope>Everything</filterScope>
        <label>Need to Update Subscription Creator</label>
    </listViews>
    <listViews>
        <fullName>X1977_test</fullName>
        <columns>NAME</columns>
        <columns>Product_Line__c</columns>
        <columns>GrossTotal__c</columns>
        <columns>Zuora__TCV__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Line__c</field>
            <operation>equals</operation>
            <value>Migrated Contract</value>
        </filters>
        <filters>
            <field>GrossTotal__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Zuora__TCV__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>1977 test</label>
    </listViews>
    <listViews>
        <fullName>X2018</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>2018</label>
    </listViews>
    <listViews>
        <fullName>X2340_test</fullName>
        <columns>NAME</columns>
        <columns>Product_Line__c</columns>
        <columns>GrossTotal__c</columns>
        <columns>Zuora__TCV__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zuora__TCV__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Product_Line__c</field>
            <operation>equals</operation>
            <value>Migrated Contract</value>
        </filters>
        <filters>
            <field>GrossTotal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>2340 test</label>
    </listViews>
    <listViews>
        <fullName>howlsubs</fullName>
        <columns>Zuora__Account__c</columns>
        <columns>NAME</columns>
        <columns>Zuora__Status__c</columns>
        <columns>Product_Line__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Zuora__ContractAcceptanceDate__c</columns>
        <columns>Zuora__ContractEffectiveDate__c</columns>
        <columns>Zuora__ServiceActivationDate__c</columns>
        <columns>Zuora__TCV__c</columns>
        <columns>Zuora__TermStartDate__c</columns>
        <columns>Zuora__SubscriptionStartDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>contains</operation>
            <value>howl</value>
        </filters>
        <label>howl subscription</label>
    </listViews>
    <listViews>
        <fullName>nick002</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Zuora__Account__c</columns>
        <columns>AccountIdCaseInsensitive__c</columns>
        <columns>Zuora__AutoRenew__c</columns>
        <columns>AutoRenewal__c</columns>
        <columns>Billing_Account_ID_Formula_c__c</columns>
        <columns>Zuora__CustomerAccount__c</columns>
        <columns>Zuora__CancelledDate__c</columns>
        <columns>Zuora__MRR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>A-S00167815</value>
        </filters>
        <label>nick002</label>
    </listViews>
    <listViews>
        <fullName>nick003</fullName>
        <columns>NAME</columns>
        <columns>Zuora__SubscriptionNumber__c</columns>
        <columns>Zuora__SubscriptionStartDate__c</columns>
        <columns>SubscriptionType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zuora__SubscriptionNumber__c</field>
            <operation>startsWith</operation>
            <value>sub1</value>
        </filters>
        <label>nick003</label>
    </listViews>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>